<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/layout_root"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#FFFF"
            >
<LinearLayout android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:padding="10dp"
              >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content" 
              android:orientation="horizontal"
              >
        <ImageView android:id="@+id/image"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginRight="10dp"
                   android:src="@drawable/icon"
                   />
        <LinearLayout android:layout_width="fill_parent" 
                      android:layout_height="wrap_content" 
                      android:orientation="vertical"
                      >
            <TextView android:id="@+id/text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#F000" android:text="@string/size_title" /><TextView android:id="@+id/text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#F000" android:text="@string/size_standard" /><TextView android:id="@+id/text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#F000" android:text="@string/size_large" /><TextView android:id="@+id/text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#F000" android:text="@string/size_xlarge" />
            
        </LinearLayout>
    </LinearLayout>
    <TextView android:id="@+id/text"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#F000"
              android:text="@string/type_title"
              />
    <TextView android:id="@+id/text"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#F000"
              android:text="@string/type_fair"
              />
    <TextView android:id="@+id/text"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#F000"
              android:text="@string/type_random"
              />
    <TextView android:id="@+id/text"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#F000"
              android:text="@string/type_traditional"
              />
    <TextView android:id="@+id/text"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#F000"
              android:text="@string/button_title"
              />
    <TextView android:id="@+id/text"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#F000"
              android:text="@string/button_generate"
              />
    <TextView android:id="@+id/text"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#F000"
              android:text="@string/button_shuffle_probabilities"
              />
    <TextView android:id="@+id/text"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#F000"
              android:text="@string/button_shuffle_harbors"
              />
<TextView android:id="@+id/text" android:paddingTop="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#F000" android:text="@string/author" android:layout_gravity="center"/>
<TextView android:id="@+id/text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#F000" android:text="@string/copyright" android:layout_gravity="center"/></LinearLayout>
</ScrollView>